moved pokeball up to avoid scrolling and made menu close on mobile when navigating

--- a/styles/pokeBall.css
+++ b/styles/pokeBall.css
@@ -7,7 +7,7 @@
 /* Poké Styles */
 .pokeball {
   position: relative;
-  margin: 100em auto 0 auto;
+  margin: 50em auto 0 auto;
   width: 150px;
   height: 150px;
   background: #fff;
